--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "del": "^2.2.0",
+    "gulp": "^3.9.1"
   },
   "dependencies": {
-    "laravel-elixir": "^4.0.0",
-    "bootstrap-sass": "^3.0.0"
+    "bootstrap-sass": "^3.0.0",
+    "gulp-livereload": "^3.8.0",
+    "gulp-rimraf": "^0.2.0",
+    "rimraf": "2.4.0",
+    "laravel-elixir": "^4.0.0"
   }
 }
